add section how

--- a/index.html
+++ b/index.html
@@ -109,6 +109,48 @@
                     </div>
                 </div>
             </section>
+            <section class="main__how how">
+                <div class="how__container">
+                    <h2 class="how__title title title-center">
+                        How it works?
+                    </h2>
+                    <ul class="how__list">
+                        <li class="how__item item-how item-how--1">
+                            <div class="item-how__icon">
+                                <img src="./img/how/Icon1.svg" alt="icon">
+                            </div>
+                            <h5 class="item-how__title">
+                                Research Suburbs
+                            </h5>
+                            <p class="item-how__text">
+                                Wonder twenty hunted and put income set desire expect. Am cottage calling.
+                            </p>
+                        </li>
+                        <li class="how__item item-how item-how--2">
+                            <div class="item-how__icon">
+                                <img src="./img/how/Icon2.svg" alt="icon">
+                            </div>
+                            <h5 class="item-how__title">
+                                Instant Valuation
+                            </h5>
+                            <p class="item-how__text">
+                                Conveying or northward offending admitting perfectly my. Colonel gravit and moonlight.
+                            </p>
+                        </li>
+                        <li class="how__item item-how item-how--3">
+                            <div class="item-how__icon">
+                                <img src="./img/how/Icon3.svg" alt="icon">
+                            </div>
+                            <h5 class="item-how__title">
+                                Track Property
+                            </h5>
+                            <p class="item-how__text">
+                                Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
         <footer class="footer">
 
