--- a/index.html
+++ b/index.html
@@ -19,27 +19,32 @@
             <div class="header__container">
                 <a href="" class="header__logo">SmartSpace</a>
                 <nav class="header__menu menu">
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Home</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">About</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Service</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Portfolio</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Blog</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Contact</a>
-                        </li>
-                    </ul>
+                   <div class="menu__body">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a href="" class="menu__link">Home</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">About</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">Service</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">Portfolio</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">Blog</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">Contact</a>
+                            </li>
+                        </ul>
+                   </div>
                 </nav>
+                <button class="icon-menu" type="button">
+                    <span></span>
+                </button>
             </div>
         </header>
         <main class="main">
@@ -153,7 +158,9 @@
             </section>
         </main>
         <footer class="footer">
-
+            <div class="footer__container">
+            </div>
+      
         </footer>
     </wrapper>
 
@@ -162,3 +169,4 @@
 </body>
 
 </html>
+
