add section deals

--- a/index.html
+++ b/index.html
@@ -156,6 +156,149 @@
                     </ul>
                 </div>
             </section>
+             <section class="main__deals deals">
+                <div class="deals__container">
+                    <div class="deals__header header-deals">
+                        <div class="header-deal__content">
+                            <h2 class="header-deal__title title">Best Real Estate Deals</h2>
+                            <p class="header-deal__text">Colonel gravity get thought fat smiling add but. Wonder twenty
+                                hunted and put income set desire expect.</p>
+                        </div>
+                        <a href="" class="header-deal__link">View All Property</a>
+                    </div>
+                    <div class="deals__tabs tabs-deals">
+                        <nav class="tabs-deals__nav">
+                            <ul class="tabs-deals__list">
+                                <li class="tabs-deals__item">
+                                    <button class="tabs-deals__button active">Residential Property</button>
+                                </li>
+                                <li class="tabs-deals__item">
+                                    <button class="tabs-deals__button">Commercial Property</button>
+                                </li>
+                                <li class="tabs-deals__item">
+                                    <button class="tabs-deals__button">Agriculture Property</button>
+                                </li>
+                                <li class="tabs-deals__item">
+                                    <button class="tabs-deals__button">Industrial Property</button>
+                                </li>
+                            </ul>
+                        </nav>
+                        <div class="tabs-deals__body body-tabs-deals">
+                            <div class="tabs-deals__item-active item-tabs active">
+                                <ul class="body-tabs-deals__list">
+                                    <li class="body-tabs-deals__item body-tabs-deals__item-relative">
+                                        <div class="body-tabs-deals__options">
+                                            <a href="" class="body-tabs-deals__option">Featured</a>
+                                            <a href="" class="body-tabs-deals__option">3D</a>
+                                        </div>
+                                        <a href="" class="body-tabs-deals__image">
+                                            <img src="./img/deals/tab1.jpg" alt="tab">
+                                        </a>
+                                    </li>
+                                    <li class="body-tabs-deals__item body-tabs-deals__item-relative">
+                                        <div class="body-tabs-deals__options">
+                                            <a href="" class="body-tabs-deals__option">Featured</a>
+                                            <a href="" class="body-tabs-deals__option">3D</a>
+                                        </div>
+                                        <a href="" class="body-tabs-deals__image">
+                                            <img src="./img/deals/tab2.jpg" alt="tab">
+                                        </a>
+                                    </li>
+                                    <li class="body-tabs-deals__item body-tabs-deals__item-relative">
+                                        <div class="body-tabs-deals__options">
+                                            <a href="" class="body-tabs-deals__option">Featured</a>
+                                        </div>
+                                        <a href="" class="body-tabs-deals__image">
+                                            <img src="./img/deals/tab3.jpg" alt="tab">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="tabs-deals__item-active item-tabs">
+                                <ul class="body-tabs-deals__list">
+                                    <li class="body-tabs-deals__item body-tabs-deals__item-relative">
+                                        <div class="body-tabs-deals__options">
+                                            <a href="" class="body-tabs-deals__option">Featured</a>
+                                            <a href="" class="body-tabs-deals__option">3D</a>
+                                        </div>
+                                        <a href="" class="body-tabs-deals__image">
+                                            <img src="./img/deals/tab1.jpg" alt="tab">
+                                        </a>
+                                    </li>
+                                    <li class="body-tabs-deals__item body-tabs-deals__item-relative">
+                                        <div class="body-tabs-deals__options">
+                                            <a href="" class="body-tabs-deals__option">Featured</a>
+                                        </div>
+                                        <a href="" class="body-tabs-deals__image">
+                                            <img src="./img/deals/tab3.jpg" alt="tab">
+                                        </a>
+                                    </li>
+                                    <li class="body-tabs-deals__item body-tabs-deals__item-relative">
+                                        <div class="body-tabs-deals__options">
+                                            <a href="" class="body-tabs-deals__option">Featured</a>
+                                            <a href="" class="body-tabs-deals__option">3D</a>
+                                        </div>
+                                        <a href="" class="body-tabs-deals__image">
+                                            <img src="./img/deals/tab1.jpg" alt="tab">
+                                        </a>
+                                    </li>
+                                    <li class="body-tabs-deals__item body-tabs-deals__item-relative">
+                                        <div class="body-tabs-deals__options">
+                                            <a href="" class="body-tabs-deals__option">Featured</a>
+                                        </div>
+                                        <a href="" class="body-tabs-deals__image">
+                                            <img src="./img/deals/tab3.jpg" alt="tab">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="tabs-deals__item-active item-tabs">
+                                <ul class="body-tabs-deals__list">
+                                    <li class="body-tabs-deals__item body-tabs-deals__item-relative">
+                                        <div class="body-tabs-deals__options">
+                                            <a href="" class="body-tabs-deals__option">Featured</a>
+                                            <a href="" class="body-tabs-deals__option">3D</a>
+                                        </div>
+                                        <a href="" class="body-tabs-deals__image">
+                                            <img src="./img/deals/tab2.jpg" alt="tab">
+                                        </a>
+                                    </li>
+                                    <li class="body-tabs-deals__item body-tabs-deals__item-relative">
+                                        <div class="body-tabs-deals__options">
+                                            <a href="" class="body-tabs-deals__option">Featured</a>
+                                        </div>
+                                        <a href="" class="body-tabs-deals__image">
+                                            <img src="./img/deals/tab3.jpg" alt="tab">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="tabs-deals__item-active item-tabs">
+                                <ul class="body-tabs-deals__list">
+                                    <li class="body-tabs-deals__item body-tabs-deals__item-relative">
+                                        <div class="body-tabs-deals__options">
+                                            <a href="" class="body-tabs-deals__option">Featured</a>
+                                            <a href="" class="body-tabs-deals__option">3D</a>
+                                        </div>
+                                        <a href="" class="body-tabs-deals__image">
+                                            <img src="./img/deals/tab1.jpg" alt="tab">
+                                        </a>
+                                    </li>
+                                    <li class="body-tabs-deals__item body-tabs-deals__item-relative">
+                                        <div class="body-tabs-deals__options">
+                                            <a href="" class="body-tabs-deals__option">Featured</a>
+                                            <a href="" class="body-tabs-deals__option">3D</a>
+                                        </div>
+                                        <a href="" class="body-tabs-deals__image">
+                                            <img src="./img/deals/tab2.jpg" alt="tab">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="footer__container">
