add section reviews

--- a/index.html
+++ b/index.html
@@ -359,6 +359,129 @@
                     </div>
                 </div>
             </section>
+            <section class="main__reviews reviews">
+                <div class="reviews__container">
+                    <h2 class="reviews__title title">Loved by businesses, and individuals across the globe.</h2>
+                    <div class="reviews__items">
+                        <a href="" class="reviews__item item-reviews">
+                            <div class="item-reviews__raiting simple-rating">
+                                <div class="simple-rating__items">
+                                    <input id="simple-rating__5" type="radio" class="simple-rating__item" name="simple-rating" value="5">
+                                    <label for="simple-rating__5" class="simple-rating__label"></label>
+                                    <input id="simple-rating__4" type="radio" class="simple-rating__item" name="simple-rating" value="4">
+                                    <label for="simple-rating__4" class="simple-rating__label"></label>
+                                    <input id="simple-rating__3" type="radio" class="simple-rating__item" checked name="simple-rating" value="3">
+                                    <label for="simple-rating__3" class="simple-rating__label"></label>
+                                    <input id="simple-rating__2" type="radio" class="simple-rating__item" name="simple-rating" value="2">
+                                    <label for="simple-rating__2" class="simple-rating__label"></label>
+                                    <input id="simple-rating__1" type="radio" class="simple-rating__item" name="simple-rating" value="1">
+                                    <label for="simple-rating__1" class="simple-rating__label"></label>
+                                </div>
+                            </div>
+                            <p class="item-reviews__text">
+                                Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible. Consulted admitting oh mr up as described.
+                            </p>
+                            <div class="item-reviews__author author-item-reviews">
+                                <div class="author-item-reviews__avatar">
+                                    <img src="./img/reviews/avatar1.svg" alt="avatar">
+                                </div>
+                                <div class="author-item-reviews__user">
+                                    <p class="author-item-reviews__name">
+                                        Jane Cooper
+                                    </p>
+                                    <p class="author-item-reviews__location">
+                                        Los Angeles, CA
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="" class="reviews__item item-reviews">
+                            <div class="item-reviews__raiting simple-rating">
+                                <div class="simple-rating__items">
+                                    <input id="simple-rating__25" type="radio" class="simple-rating__item" checked name="simple-rating-2" value="5">
+                                    <label for="simple-rating__25" class="simple-rating__label"></label>
+                                    <input id="simple-rating__24" type="radio" class="simple-rating__item" name="simple-rating-2" value="4">
+                                    <label for="simple-rating__24" class="simple-rating__label"></label>
+                                    <input id="simple-rating__23" type="radio" class="simple-rating__item"  name="simple-rating-2" value="3">
+                                    <label for="simple-rating__23" class="simple-rating__label"></label>
+                                    <input id="simple-rating__22" type="radio" class="simple-rating__item" name="simple-rating-2" value="2">
+                                    <label for="simple-rating__22" class="simple-rating__label"></label>
+                                    <input id="simple-rating__21" type="radio" class="simple-rating__item" name="simple-rating-2" value="1">
+                                    <label for="simple-rating__21" class="simple-rating__label"></label>
+                                </div>
+                            </div>
+                            <p class="item-reviews__text">
+                                Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible. Consulted admitting oh mr up as described.
+                            </p>
+                            <div class="item-reviews__author author-item-reviews">
+                                <div class="author-item-reviews__avatar">
+                                    <img src="./img/reviews/avatar2.svg" alt="avatar">
+                                </div>
+                                <div class="author-item-reviews__user">
+                                    <p class="author-item-reviews__name">
+                                        Robert Fox
+                                    </p>
+                                    <p class="author-item-reviews__location">
+                                        New York City, NY
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="" class="reviews__item item-reviews">
+                            <div class="item-reviews__raiting simple-rating">
+                                <div class="simple-rating__items">
+                                    <input id="simple-rating__35" type="radio" class="simple-rating__item"  name="simple-rating-3" value="5">
+                                    <label for="simple-rating__35" class="simple-rating__label"></label>
+                                    <input id="simple-rating__34" type="radio" class="simple-rating__item" checked name="simple-rating-3" value="4">
+                                    <label for="simple-rating__34" class="simple-rating__label"></label>
+                                    <input id="simple-rating__33" type="radio" class="simple-rating__item"  name="simple-rating-3" value="3">
+                                    <label for="simple-rating__33" class="simple-rating__label"></label>
+                                    <input id="simple-rating__32" type="radio" class="simple-rating__item" name="simple-rating-3" value="2">
+                                    <label for="simple-rating__32" class="simple-rating__label"></label>
+                                    <input id="simple-rating__31" type="radio" class="simple-rating__item" name="simple-rating-3" value="1">
+                                    <label for="simple-rating__31" class="simple-rating__label"></label>
+                                </div>
+                            </div>
+                            <p class="item-reviews__text">
+                                Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible. Consulted admitting oh mr up as described.
+                            </p>
+                            <div class="item-reviews__author author-item-reviews">
+                                <div class="author-item-reviews__avatar">
+                                    <img src="./img/reviews/avatar3.svg" alt="avatar">
+                                </div>
+                                <div class="author-item-reviews__user">
+                                    <p class="author-item-reviews__name">
+                                        Leslie Alexander
+                                    </p>
+                                    <p class="author-item-reviews__location">
+                                        Buffalo, NJ
+                                    </p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="reviews__footer footer-reviews">
+                        <ul class="footer-reviews__list">
+                            <div class="footer-reviews__item">
+                                <img src="./img/reviews/icon1.svg" alt="airbnb">
+                            </div>
+                            <div class="footer-reviews__item">
+                                <img src="./img/reviews/icon2.svg" alt="cisco">
+                            </div>
+                            <div class="footer-reviews__item">
+                                <img src="./img/reviews/icon3.svg" alt="ebay">
+                            </div>
+                            <div class="footer-reviews__item">
+                                <img src="./img/reviews/icon4.svg" alt="UBER">
+                            </div>
+                            <div class="footer-reviews__item">
+                                <img src="./img/reviews/icon5.svg" alt="Microsoft">
+                            </div>
+                        </ul>
+                        <p class="footer-reviews__info">Give us a Call <a href="tel:1-888-111-2222" class="footer-reviews__info-tel">1-888-111-2222</a> and we can set you up, or <a href="#" class="footer-reviews__info-link">check our pricing plans</a></p>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="footer__container">
