--- a/index.html
+++ b/index.html
@@ -482,6 +482,19 @@
                     </div>
                 </div>
             </section>
+            <section class="main__subscribe subscribe">
+                <div class="subscribe__container">
+                    <h2 class="subscribe__title title title-center">Get Our Newsletter</h2>
+                    <h3 class="subscribe__subtitle">To join the worldwide community</h3>
+                    <form action="" class="subscribe__form form-subscribe">
+                        <div class="form-subscribe__content">
+                            <label for="form-subscribe" class="form-subscribe__label">Type your Email Address</label>
+                            <input id="form-subscribe" type="text" placeholder="shakir260@gmail.com" class="form-subscribe__input">
+                        </div>
+                        <button class="form-subscribe__button">Send Now</button>
+                    </form>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="footer__container">
