add section footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <wrapper class="wrapper">
         <header class="header">
             <div class="header__container">
-                <a href="" class="header__logo">SmartSpace</a>
+                <a href="" class="header__logo logo">SmartSpace</a>
                 <nav class="header__menu menu">
                     <div class="menu__body">
                         <ul class="menu__list">
@@ -366,20 +366,26 @@
                         <a href="" class="reviews__item item-reviews">
                             <div class="item-reviews__raiting simple-rating">
                                 <div class="simple-rating__items">
-                                    <input id="simple-rating__5" type="radio" class="simple-rating__item" name="simple-rating" value="5">
+                                    <input id="simple-rating__5" type="radio" class="simple-rating__item"
+                                        name="simple-rating" value="5">
                                     <label for="simple-rating__5" class="simple-rating__label"></label>
-                                    <input id="simple-rating__4" type="radio" class="simple-rating__item" name="simple-rating" value="4">
+                                    <input id="simple-rating__4" type="radio" class="simple-rating__item"
+                                        name="simple-rating" value="4">
                                     <label for="simple-rating__4" class="simple-rating__label"></label>
-                                    <input id="simple-rating__3" type="radio" class="simple-rating__item" checked name="simple-rating" value="3">
+                                    <input id="simple-rating__3" type="radio" class="simple-rating__item" checked
+                                        name="simple-rating" value="3">
                                     <label for="simple-rating__3" class="simple-rating__label"></label>
-                                    <input id="simple-rating__2" type="radio" class="simple-rating__item" name="simple-rating" value="2">
+                                    <input id="simple-rating__2" type="radio" class="simple-rating__item"
+                                        name="simple-rating" value="2">
                                     <label for="simple-rating__2" class="simple-rating__label"></label>
-                                    <input id="simple-rating__1" type="radio" class="simple-rating__item" name="simple-rating" value="1">
+                                    <input id="simple-rating__1" type="radio" class="simple-rating__item"
+                                        name="simple-rating" value="1">
                                     <label for="simple-rating__1" class="simple-rating__label"></label>
                                 </div>
                             </div>
                             <p class="item-reviews__text">
-                                Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible. Consulted admitting oh mr up as described.
+                                Moderate children at of outweigh it. Unsatiable it considered invitation he travelling
+                                insensible. Consulted admitting oh mr up as described.
                             </p>
                             <div class="item-reviews__author author-item-reviews">
                                 <div class="author-item-reviews__avatar">
@@ -398,20 +404,26 @@
                         <a href="" class="reviews__item item-reviews">
                             <div class="item-reviews__raiting simple-rating">
                                 <div class="simple-rating__items">
-                                    <input id="simple-rating__25" type="radio" class="simple-rating__item" checked name="simple-rating-2" value="5">
+                                    <input id="simple-rating__25" type="radio" class="simple-rating__item" checked
+                                        name="simple-rating-2" value="5">
                                     <label for="simple-rating__25" class="simple-rating__label"></label>
-                                    <input id="simple-rating__24" type="radio" class="simple-rating__item" name="simple-rating-2" value="4">
+                                    <input id="simple-rating__24" type="radio" class="simple-rating__item"
+                                        name="simple-rating-2" value="4">
                                     <label for="simple-rating__24" class="simple-rating__label"></label>
-                                    <input id="simple-rating__23" type="radio" class="simple-rating__item"  name="simple-rating-2" value="3">
+                                    <input id="simple-rating__23" type="radio" class="simple-rating__item"
+                                        name="simple-rating-2" value="3">
                                     <label for="simple-rating__23" class="simple-rating__label"></label>
-                                    <input id="simple-rating__22" type="radio" class="simple-rating__item" name="simple-rating-2" value="2">
+                                    <input id="simple-rating__22" type="radio" class="simple-rating__item"
+                                        name="simple-rating-2" value="2">
                                     <label for="simple-rating__22" class="simple-rating__label"></label>
-                                    <input id="simple-rating__21" type="radio" class="simple-rating__item" name="simple-rating-2" value="1">
+                                    <input id="simple-rating__21" type="radio" class="simple-rating__item"
+                                        name="simple-rating-2" value="1">
                                     <label for="simple-rating__21" class="simple-rating__label"></label>
                                 </div>
                             </div>
                             <p class="item-reviews__text">
-                                Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible. Consulted admitting oh mr up as described.
+                                Moderate children at of outweigh it. Unsatiable it considered invitation he travelling
+                                insensible. Consulted admitting oh mr up as described.
                             </p>
                             <div class="item-reviews__author author-item-reviews">
                                 <div class="author-item-reviews__avatar">
@@ -430,20 +442,26 @@
                         <a href="" class="reviews__item item-reviews">
                             <div class="item-reviews__raiting simple-rating">
                                 <div class="simple-rating__items">
-                                    <input id="simple-rating__35" type="radio" class="simple-rating__item"  name="simple-rating-3" value="5">
+                                    <input id="simple-rating__35" type="radio" class="simple-rating__item"
+                                        name="simple-rating-3" value="5">
                                     <label for="simple-rating__35" class="simple-rating__label"></label>
-                                    <input id="simple-rating__34" type="radio" class="simple-rating__item" checked name="simple-rating-3" value="4">
+                                    <input id="simple-rating__34" type="radio" class="simple-rating__item" checked
+                                        name="simple-rating-3" value="4">
                                     <label for="simple-rating__34" class="simple-rating__label"></label>
-                                    <input id="simple-rating__33" type="radio" class="simple-rating__item"  name="simple-rating-3" value="3">
+                                    <input id="simple-rating__33" type="radio" class="simple-rating__item"
+                                        name="simple-rating-3" value="3">
                                     <label for="simple-rating__33" class="simple-rating__label"></label>
-                                    <input id="simple-rating__32" type="radio" class="simple-rating__item" name="simple-rating-3" value="2">
+                                    <input id="simple-rating__32" type="radio" class="simple-rating__item"
+                                        name="simple-rating-3" value="2">
                                     <label for="simple-rating__32" class="simple-rating__label"></label>
-                                    <input id="simple-rating__31" type="radio" class="simple-rating__item" name="simple-rating-3" value="1">
+                                    <input id="simple-rating__31" type="radio" class="simple-rating__item"
+                                        name="simple-rating-3" value="1">
                                     <label for="simple-rating__31" class="simple-rating__label"></label>
                                 </div>
                             </div>
                             <p class="item-reviews__text">
-                                Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible. Consulted admitting oh mr up as described.
+                                Moderate children at of outweigh it. Unsatiable it considered invitation he travelling
+                                insensible. Consulted admitting oh mr up as described.
                             </p>
                             <div class="item-reviews__author author-item-reviews">
                                 <div class="author-item-reviews__avatar">
@@ -478,7 +496,9 @@
                                 <img src="./img/reviews/icon5.svg" alt="Microsoft">
                             </div>
                         </ul>
-                        <p class="footer-reviews__info">Give us a Call <a href="tel:1-888-111-2222" class="footer-reviews__info-tel">1-888-111-2222</a> and we can set you up, or <a href="#" class="footer-reviews__info-link">check our pricing plans</a></p>
+                        <p class="footer-reviews__info">Give us a Call <a href="tel:1-888-111-2222"
+                                class="footer-reviews__info-tel">1-888-111-2222</a> and we can set you up, or <a
+                                href="#" class="footer-reviews__info-link">check our pricing plans</a></p>
                     </div>
                 </div>
             </section>
@@ -489,7 +509,8 @@
                     <form action="" class="subscribe__form form-subscribe">
                         <div class="form-subscribe__content">
                             <label for="form-subscribe" class="form-subscribe__label">Type your Email Address</label>
-                            <input id="form-subscribe" type="text" placeholder="shakir260@gmail.com" class="form-subscribe__input">
+                            <input id="form-subscribe" type="text" placeholder="shakir260@gmail.com"
+                                class="form-subscribe__input">
                         </div>
                         <button class="form-subscribe__button">Send Now</button>
                     </form>
@@ -498,6 +519,30 @@
         </main>
         <footer class="footer">
             <div class="footer__container">
+                <a href="" class="footer__logo logo">SmartSpace</a>
+                <nav class="footer__menu menu-footer">
+                    <ul class="menu-footer__list">
+                        <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Home</a>
+                        </li>
+                        <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">About</a>
+                        </li>
+                        <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Service</a>
+                        </li>
+                        <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Portfolio</a>
+                        </li>
+                        <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Blog</a>
+                        </li>
+                        <li class="menu-footer__item">
+                            <a href="" class="menu-footer__link">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="footer__copy">Copyright © 2021 AR Shakir . All Rights Reseved.</div>
             </div>
 
         </footer>
